FUnbrain logo push

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="apps-grid">
             <div class="app-card" onclick="openApp('https://www.funbrain.com')">
                 <div class="app-icon funbrain">
-                    <img src="img/funbrain.png" alt="Funbrain Logo">
+                    <img src="img/Funbrain.png" alt="Funbrain Logo">
                 </div>
                 <div class="app-title">FUNBRAIN</div>
                 <div class="app-desc" id="funbrain-desc">Fun games for learning!</div>
